--- a/frontend/static/css/style.css
+++ b/frontend/static/css/style.css
@@ -19,3 +19,24 @@ h2 {
   width: 45%;
   padding-left: 10px;
 }
+
+.contact-block {
+  display: flex;
+  flex-flow: column;
+  height: 100px;
+  border: 1px solid rgb(210, 14, 14);
+}
+
+#contentToHide {
+  overflow: hidden;
+  height: 50%;
+  transition: all 1s ease-out;
+}
+
+a[data-link] {
+  text-decoration: none;
+}
+
+#phoneBlock > p {
+  transition: all 1s ease;
+}
